[gd_scene load_steps=4 format=3 uid="uid://cxj6tatsod5e"]

[ext_resource type="Texture2D" uid="uid://c85u0k4xsk832" path="res://graphics/player/player.png" id="1_wv3re"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="3_3cajd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cl3yi"]
radius = 65.123

[node name="Player" type="CharacterBody2D"]
script = ExtResource("3_3cajd")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(129, 21)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(126, 29)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(126, 11)

[node name="PlayerImage" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(36, 1)
rotation = 1.5708
texture = ExtResource("1_wv3re")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_cl3yi")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GrenadeReloadTimer" to="." method="_on_grenade_reload_timer_timeout"]
